# rules_d

./: CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json  source.template.json
.github/workflows/: ci.bazelrc  ci.yaml  release.yml  release_prep.sh
d/: BUILD.bazel  DMD.bzl.tpl  LDC.bzl.tpl  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
d/constraints/compiler/: BUILD.bazel
d/private/: BUILD.bazel  DMD.bzl.tpl  d_binary.bzl  d_common.bzl  d_library.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
d/tests/: versions_test.bzl
docs/: rules.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
e2e/smoke/app/: BUILD  main.d
e2e/smoke/source/: BUILD
e2e/smoke/source/greeter/: package.d
e2e/smoke/source/hello/: greet.d
