"Bazel dependencies"

module(
    name = "gzgz_rules_d",
    compatibility_level = 1,
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "aspect_bazel_lib", dev_dependency = True, version = "1.32.1")
bazel_dep(name = "buildifier_prebuilt", dev_dependency = True, version = "6.1.0")
