load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//d:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//d:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//d:__subpackages__"],
)

bzl_library(
    name = "d_rules",
    srcs = [
        "d_binary.bzl",
        "d_common.bzl",
        "d_library.bzl",
    ],
    deps = [
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:structs",
        "@rules_cc//cc:action_names.bzl",
        "@rules_cc//cc:find_cc_toolchain.bzl",
        "//d:toolchain",
    ],
    visibility = ["//d:__subpackages__"],
)
