bazel_dep(name = "gzgz_rules_d", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.3.0", dev_dependency = True)

local_path_override(
    module_name = "gzgz_rules_d",
    path = "../..",
)

d = use_extension("@gzgz_rules_d//:extensions.bzl", "d")

d.d_toolchain(
    compiler = "dmd",
    version = "2.100.2",
)
use_repo(d, "d_dmd_toolchain")

register_toolchains("@d_dmd_toolchains//:all")
