module(
    name = "smoke",
    compatibility_level = 0,
    version = "0.0.0",
)

bazel_dep(name = "gzgz_rules_d", dev_dependency = True, version = "0.0.0")
bazel_dep(name = "bazel_skylib", dev_dependency = True, version = "1.3.0")

local_path_override(
    module_name = "gzgz_rules_d",
    path = "../..",
)

d = use_extension("@gzgz_rules_d//d:extensions.bzl", "d")

d.toolchain(
    compiler = "dmd",
    version = "2.105.0",
)

use_repo(d, "d_dmd_toolchains")

register_toolchains("@d_dmd_toolchains//:all")
