module(
    name = "smoke",
    version = "0.0.0",
    compatibility_level = 0,
)

bazel_dep(name = "gzgz_rules_d", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.3.0", dev_dependency = True)

local_path_override(
    module_name = "gzgz_rules_d",
    path = "../..",
)

d = use_extension("@gzgz_rules_d//d:extensions.bzl", "d")
d.toolchain(
    compiler = "dmd",
    version = "2.105.0",
)
use_repo(d, "d_dmd_toolchains")

register_toolchains("@d_dmd_toolchains//:all")
