# Override http_archive for local testing
local_repository(
    name = "gzgz_rules_d",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_d setup #
######################
# Fetches the rules_d dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@gzgz_rules_d//d:repositories.bzl", "d_register_toolchains", "rules_d_dependencies")

rules_d_dependencies()

d_register_toolchains(
    name = "d",
    compiler = "dmd",
    version = "2.105.0",
)


d_register_toolchains(
    name = "d",
    compiler = "ldc",
    version = "1.30.0",
)
